# result-py

./: .buildinfo  .coverage  .gitignore  README.md  __init__.py  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  search.html  searchindex.js
.github/workflows/: deploy_pages.yaml  pages.yaml  publish.yaml  test.yaml
_modules/: index.html
_modules/effect_py/: contracts.html
_modules/result_py/: contracts.html
_sources/: api.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst
effect_py/: either.py
examples/: apply_discount.py  matching.py  simple_chaining.py
result_py/: __init__.py  contracts.py  either.py
tests/: __init__.py  test_contracts.py  test_either.py  test_integration.py
